--- a/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
+++ b/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
@@ -8245,7 +8245,7 @@
         <div class="large-8 columns" id="login">
             <div class="row">
                 <div class="large-12 columns" style="padding:0 2em">
-                    <h1 style="font-family: Oswald;color:#FF6666">EXPERIENCE NEXT LEVEL LUXURY</h1>
+                    <h1 style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
                     <div style="padding-left:10px">
                         <ul class="square times">
                             <li>Take Style Quiz</li>
@@ -8255,8 +8255,8 @@
                         </ul>
                     </div>
 
-                    <a id="gom" class="button discover" href="http://www.shemint.com/40off-offer" style="background-color:#FF6666; margin-top:1em;">
-                        <strong>DISCOVER MORE</strong>
+                    <a id="gom" class="button discover" href="http://www.shemint.com/40off-offer" style="background-color:#FF6666; margin-top:2.3em;">
+                        <strong>LET'S GET YOUR DISCOUNT</strong>
                     </a>
 
                 </div>
