--- a/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
+++ b/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
@@ -8232,7 +8232,7 @@
                             <li>Shop What You Love</li>
                         </ul>
                     </div>
-                    <a id="go" class="button discover" href="http://www.shemint.com/40off-offer" style="background-color:#FF6666; margin-top:2.3em">
+                    <a id="go" class="button discover" href="http://www.shoemint.com/40off-offer" style="background-color:#FF6666; margin-top:2.3em">
                         <strong>LET'S GET YOUR DISCOUNT</strong>
                     </a>
                 </div>
@@ -8255,7 +8255,7 @@
                         </ul>
                     </div>
 
-                    <a id="gom" class="button discover" href="http://www.shemint.com/40off-offer" style="background-color:#FF6666; margin-top:2.3em;">
+                    <a id="gom" class="button discover" href="http://www.shoemint.com/40off-offer" style="background-color:#FF6666; margin-top:2.3em;">
                         <strong>LET'S GET YOUR DISCOUNT</strong>
                     </a>
 
