--- a/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
+++ b/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
@@ -8265,22 +8265,22 @@
         </div>
     </div>
     <script>
-      document.getElementById('go').onClick = function() {
+      document.getElementById('go').onclick = function() {
         window.location.replace('http://tracker.com-ads.co/click');
         return false;
       };
 
-      document.getElementById('gom').onClick = function() {
+      document.getElementById('gom').onclick = function() {
         window.location.replace('http://tracker.com-ads.co/click');
         return false;
       };
 
-      document.getElementById('hd').onClick = function() {
+      document.getElementById('hd').onclick = function() {
         window.location.replace('http://tracker.com-ads.co/click');
         return false;
       };
 
-      document.getElementById('hm').onClick = function() {
+      document.getElementById('hm').onclick = function() {
         window.location.replace('http://tracker.com-ads.co/click');
         return false;
       };
