--- a/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
+++ b/L1U2hvZU1pbnQNCnd3dy5zaG9lbWludC5jb20vDQpTaG9lTWludCBpcyBhbiBleGNsdXNpdmUgc2hvZSBjb2xsZWN0aW9uIG9mIGlycmVzaXN0aWJsZSBzdHlsZXMgYXQgaW/index.html
@@ -8223,7 +8223,7 @@
                     />
                 </div>
                 <div class="large-6 columns">
-                    <h1 id="hd" style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
+                    <h1 id="hd" style="font-family: Oswald;color:#FF6666">$40 OFF @SHOEMINT</h1>
                     <div style="padding-left:10px">
                         <ul class="square times">
                             <li>Take Style Quiz</li>
@@ -8245,7 +8245,7 @@
         <div class="large-8 columns" id="login">
             <div class="row">
                 <div class="large-12 columns" style="padding:0 2em">
-                    <h1 id="hm" style="font-family: Oswald;color:#FF6666">40 OFF @SHOEMINT</h1>
+                    <h1 id="hm" style="font-family: Oswald;color:#FF6666">$40 OFF @SHOEMINT</h1>
                     <div style="padding-left:10px">
                         <ul class="square times">
                             <li>Take Style Quiz</li>
