--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
 <body>
 <iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+<p>Click <a href="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9">here</a>! (Browser anda tidak mendukung iframe)</p>
 </iframe>`
 </body>
 </html>
