--- a/klb/index.html
+++ b/klb/index.html
@@ -9,7 +9,7 @@
 <head>
 <body>
 <iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-<p>Click <a href="http://fpa3m.trackvoluum.com/cd7c4cbc-1a51-4145-9ebb-26db74d4db5c">here</a>! (Browser anda tidak mendukung iframe)</p>
+<p>Click <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=kalbu&s2=0.30">here</a>! (Browser anda tidak mendukung iframe)</p>
 </iframe>`
 </body>
 </html>
