--- a/klb/index.html
+++ b/klb/index.html
@@ -1,15 +1,91 @@
+<!DOCTYPE html>
 <html>
+
+<!-- Mirrored from offers.ad7media.com/dating/ref2/ by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 11 Nov 2013 11:42:55 GMT -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>Flirchi- situs perkenalan! Komunikasi tanpa batasan</title>
-  <meta name="description" content="Situs perkenalan, situs untuk mengobrol, perkenalan gratis, perkenalan dengan orang-orang, berkenalan online">
-<meta name="keywords" content="situs perkenalan, situs-situs perkenalan, perkenalan online, situs perkenalan rusia, perkenalan gratis, perkenalan dengan orang-orang asli, perkenalan dengan wanita, perkenalan dengan pria, mengobrol dengan wanita online, situs perkenalan gratis, berkenalan dengan orang-orang, situs untuk mengobrol, mengobrol online" >
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/
-<head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+
+    <title>The Social Network For Singles In France</title>
+
+    <!-- google custom fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+    <link href="css/style.css" rel="stylesheet"  type="text/css" media="screen" />
+
+    <script type="text/javascript" src="js/jquery-2.0.3.js"></script>
+
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <!--[if it IE 8]>
+    <link href="css/ie8.css" rel="stylesheet"  type="text/css" media="screen" />
+  <![endif]-->
+
+</head>
+
 <body>
-<iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-<p>Click <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=kalbu&s2=0.30">here</a>! (Browser anda tidak mendukung iframe)</p>
-</iframe>`
+
+    <div class="wrapper center">
+
+        <header class="main-header clearfix">
+            <h1>Khusus Untuk Cari Selingkuhan!</h1>
+            <h2>(Lebih Dari 4 Juta Anggota Berasal Dari Indonesia)</h2>
+            <br>
+        </header>
+        <!-- end main-header -->
+
+        <hr class="seperator">
+
+        <section class="content-area clearfix">
+
+            <div class="content-left float-left clearfix">
+
+                <article class="content">
+
+                    <h3>Gabung Sekarang Juga</h3>
+                    <br>
+                    <ol>
+                        <li>
+                            <span>Gratis</span> sekarang dan selamanya.
+                        </li>
+                        <li>
+                            Tempat istimewa untuk <span>hubungan rahasia.</span>
+                        </li>
+                        <li>
+                            Semua yang ada di sini <span>terjaga kerahasiaanya</span>.
+                        </li>
+                        <li>
+                            Temukan pasangan <span>rahasiamu.</span>
+                        </li>
+                    </ol>
+
+                    <p>Tunggu apa lagi? Cobalah dan buktikan sendiri. Gratis hari ini dan selamanya.</p>
+
+                    <center><a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=kalbu&s2=0.30" class="button_example">Daftar!</a></center>
+
+                </article>
+                 <!-- end content -->
+
+            </div>
+            <!-- end content-left -->
+
+            <div class="content-right float-right">
+                <br/>
+                <figure class="featured-img"><a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=kalbu&s2=0.30"><img src="img/image-main.jpg" height="430px"></a></figure>
+            </div>
+            <!-- end content-right -->
+
+        </section>
+        <!-- end content-area -->
+
+    </div>
+    <!-- end center -->
+
 </body>
+
+<!-- Mirrored from offers.ad7media.com/dating/ref2/ by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 11 Nov 2013 11:42:58 GMT -->
 </html>
