--- a/klb/index.html
+++ b/klb/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
 
-    <title>The Social Network For Singles In France</title>
+    <title>Khusus Untuk Cari Selingkuhan</title>
 
     <!-- google custom fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
