--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>Flirchi- situs perkenalan! Komunikasi tanpa batasan</title>
-  <meta name="description" content="Situs perkenalan, situs untuk mengobrol, perkenalan gratis, perkenalan dengan orang-orang, berkenalan online">
-<meta name="keywords" content="situs perkenalan, situs-situs perkenalan, perkenalan online, situs perkenalan rusia, perkenalan gratis, perkenalan dengan orang-orang asli, perkenalan dengan wanita, perkenalan dengan pria, mengobrol dengan wanita online, situs perkenalan gratis, berkenalan dengan orang-orang, situs untuk mengobrol, mengobrol online" >
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/
-<head>
-<body>
-<iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-<p>Click <a href="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9">here</a>! (Browser anda tidak mendukung iframe)</p>
-</iframe>`
-</body>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Flirchi- situs perkenalan! Komunikasi tanpa batasan</title>
+    <meta name="description" content="Tempat cari selingkuhan paling aman. Gabung sekarang dan temukan pasangan rahasiamu.">
+    <meta name="keywords" content="situs perkenalan, situs-situs perkenalan, perkenalan online, situs perkenalan rusia, perkenalan gratis, perkenalan dengan orang-orang asli, perkenalan dengan wanita, perkenalan dengan pria, mengobrol dengan wanita online, situs perkenalan gratis, berkenalan dengan orang-orang, situs untuk mengobrol, mengobrol online">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" / <head>
+
+    <body>
+        <iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+            <p>Click <a href="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9">here</a>! (Browser anda tidak mendukung iframe)</p>
+        </iframe>`
+    </body>
+
 </html>
