--- a/index.html
+++ b/index.html
@@ -1,18 +1,85 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Flirchi- situs perkenalan! Komunikasi tanpa batasan</title>
-    <meta name="description" content="Tempat cari selingkuhan paling aman. Gabung sekarang dan temukan pasangan rahasiamu.">
-    <meta name="keywords" content="situs perkenalan, situs-situs perkenalan, perkenalan online, situs perkenalan rusia, perkenalan gratis, perkenalan dengan orang-orang asli, perkenalan dengan wanita, perkenalan dengan pria, mengobrol dengan wanita online, situs perkenalan gratis, berkenalan dengan orang-orang, situs untuk mengobrol, mengobrol online">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" / <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>How to Get Free Money</title>
+    <!-- Bootstrap core CSS -->
+    <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
 
-    <body>
-        <iframe src="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-            <p>Click <a href="http://zi7d1.trackvoluum.com/aa94863e-b1cf-4405-b723-9758cd4049b9">here</a>! (Browser anda tidak mendukung iframe)</p>
-        </iframe>`
-    </body>
+<body>
+    <div class="container">
+        <div class="row" style="margin-top:3rem">
+            <div class="col-sm-12 center">
+                <h1>Dirancang Untuk Mencari Selingkuhan
+                    <br>
+                    <small>Lebih Dari 4 Juta Anggota Dari Indonesia</small>
+                </h1>
+
+                <p class="lead">
+                    <span class="label label-danger">PERINGATAN: Hanya Untuk 21 Tahun Keatas</label>
+                </p>
+                <hr>
+            </div>
+        </div>
+        <div class="row" style="margin-top:2rem">
+            <div class="col-sm-8">
+                <ul class="lst">
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Gratis</span> Sekarang dan
+                            <span class="org">Selamanya</span>
+                    </li>
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Lebih Mudah</span> Mendapatkan Pasangan
+                            <span class="org">dibandingkan facebook</span>
+                    </li>
+                    <li>
+                        <span class="cpx">Bebas
+                            <span style="color:#FF6600">Upload Gambar</span> & Video
+                            <span style="color:#FF6600">Sexy</span>
+                    </li>
+                    <li>
+                        <span class="cpx">
+                            <span style="color:#FF6600">Ruang Pribadi</span> Untuk Anda & Pasangan</span>
+                    </li>
+                    <li>
+                        <span class="cpx">Kerahasiaan
+                            <span style="color:#FF6600">privasi</span> anda lebih
+                            <span style="color:#FF6600">terjaga</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru">
+                <img src="maya.png" class="img-responsive img-thumbnail">
+                </a>
+            </div>
+        </div>
+        <div class="row" style="margin-top:0.5rem">
+            <hr>
+            <div class="col-sm-12" style="text-align:center">
+                <p>
+                    <strong>Tunggu Apa Lagi? Temukan Pasangan Rahasiamu</strong>
+                </p>
+                <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
+
+            </div>
+        </div>
+</body>
 
 </html>
