--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>How to Get Free Money</title>
+    <title>Dirancang Untuk Mencari Selingkuhan</title>
     <!-- Bootstrap core CSS -->
     <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -65,9 +65,15 @@
                 </ul>
             </div>
             <div class="col-sm-4">
-                <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru">
+                <a href="/daftar" id="go1">
                 <img src="maya.png" class="img-responsive img-thumbnail">
                 </a>
+                <script>
+                document.getElementById("go1").onclick = function() {
+                  window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                  return false;
+                };
+                </script>
             </div>
         </div>
         <div class="row" style="margin-top:0.5rem">
@@ -76,7 +82,13 @@
                 <p>
                     <strong>Tunggu Apa Lagi? Temukan Pasangan Rahasiamu</strong>
                 </p>
-                <a href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
+                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
+                <script>
+                document.getElementById("go2").onclick = function() {
+                  window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                  return false;
+                };
+                </script>
 
             </div>
         </div>
