--- a/ld2/index.html
+++ b/ld2/index.html
@@ -17,6 +17,23 @@
 
     <script type="text/javascript" src="js/jquery-2.0.3.js"></script>
 
+    <!-- Facebook Conversion Code for http://id.flirchi.com-ads.co/ - Leads -->
+<script>(function() {
+  var _fbq = window._fbq || (window._fbq = []);
+  if (!_fbq.loaded) {
+    var fbds = document.createElement('script');
+    fbds.async = true;
+    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(fbds, s);
+    _fbq.loaded = true;
+  }
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6019534117513', {'value':'0.00','currency':'IDR'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6019534117513&amp;cd[value]=0.00&amp;cd[currency]=IDR&amp;noscript=1" /></noscript>
+
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
