--- a/index.html
+++ b/index.html
@@ -1,113 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>Dirancang Untuk Mencari Selingkuhan</title>
-    <!-- Bootstrap core CSS -->
-    <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href="style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <!-- Facebook Conversion Code for http://id.flirchi.com-ads.co/ -->
-<script>(function() {
-  var _fbq = window._fbq || (window._fbq = []);
-  if (!_fbq.loaded) {
-    var fbds = document.createElement('script');
-    fbds.async = true;
-    fbds.src = '//connect.facebook.net/en_US/fbds.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(fbds, s);
-    _fbq.loaded = true;
-  }
-})();
-window._fbq = window._fbq || [];
-window._fbq.push(['track', '6019536531313', {'value':'0.00','currency':'IDR'}]);
-</script>
-<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6019536531313&amp;cd[value]=0.00&amp;cd[currency]=IDR&amp;noscript=1" /></noscript>
+    <script>
+    (function() {
+        var _fbq = window._fbq || (window._fbq = []);
+        if (!_fbq.loaded) {
+            var fbds = document.createElement('script');
+            fbds.async = true;
+            fbds.src = '//connect.facebook.net/en_US/fbds.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(fbds, s);
+            _fbq.loaded = true;
+        }
+    })();
+    window._fbq = window._fbq || [];
+    window._fbq.push(['track', '6019536531313', {
+        'value': '0.00',
+        'currency': 'IDR'
+    }]);
+    </script>
+    <noscript>
+        <img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6019536531313&amp;cd[value]=0.00&amp;cd[currency]=IDR&amp;noscript=1" />
+    </noscript>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Psstt.... Mau Tau Apaan? Daftar Aja</title>
+    <style type="text/css">
+    html {
+        overflow: auto;
+    }
+    html,
+    body,
+    div,
+    iframe {
+        margin: 0px;
+        padding: 0px;
+        height: 100%;
+        border: none;
+    }
+    iframe {
+        display: block;
+        width: 100%;
+        border: none;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    </style>
+    <link rel="icon" href="favicon.ico" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="row" style="margin-top:3rem">
-            <div class="col-sm-12 center">
-                <h1>Dirancang Untuk Mencari Selingkuhan
-                    <br>
-                    <small>Lebih Dari 4 Juta Anggota Dari Indonesia</small>
-                </h1>
-
-                <p class="lead">
-                    <span class="label label-danger">PERINGATAN: Hanya Untuk 21 Tahun Keatas</label>
-                </p>
-                <hr>
-            </div>
-        </div>
-        <div class="row" style="margin-top:2rem">
-            <div class="col-sm-8">
-                <ul class="lst">
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Gratis</span> Sekarang dan
-                            <span class="org">Selamanya</span>
-                    </li>
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Lebih Mudah</span> Mendapatkan Pasangan
-                            <span class="org">dibandingkan facebook</span>
-                    </li>
-                    <li>
-                        <span class="cpx">Bebas
-                            <span style="color:#FF6600">Upload Gambar</span> & Video
-                            <span style="color:#FF6600">Sexy</span>
-                    </li>
-                    <li>
-                        <span class="cpx">
-                            <span style="color:#FF6600">Ruang Pribadi</span> Untuk Anda & Pasangan</span>
-                    </li>
-                    <li>
-                        <span class="cpx">Kerahasiaan
-                            <span style="color:#FF6600">privasi</span> anda lebih
-                            <span style="color:#FF6600">terjaga</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <a href="/daftar" id="go1">
-                <img src="maya.png" class="img-responsive img-thumbnail">
-                </a>
-                <script>
-                document.getElementById("go1").onclick = function() {
-                  window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
-                  return false;
-                };
-                </script>
-            </div>
-        </div>
-        <div class="row" style="margin-top:0.5rem">
-            <hr>
-            <div class="col-sm-12" style="text-align:center">
-                <p>
-                    <strong>Tunggu Apa Lagi? Temukan Pasangan Rahasiamu</strong>
-                </p>
-                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
-                <script>
-                document.getElementById("go2").onclick = function() {
-                  window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
-                  return false;
-                };
-                </script>
-
-            </div>
-        </div>
+    <iframe id="tree" name="tree" src="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 </body>
 
 </html>
