--- a/index.html
+++ b/index.html
@@ -1,35 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Psstt.... Mau Tau Apaan? Daftar Aja</title>
-    <style type="text/css">
-    html {
-        overflow: auto;
-    }
-    html,
-    body,
-    div,
-    iframe {
-        margin: 0px;
-        padding: 0px;
-        height: 100%;
-        border: none;
-    }
-    iframe {
-        display: block;
-        width: 100%;
-        border: none;
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
-    </style>
-    <link rel="icon" href="favicon.ico" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>Dirancang Untuk Mencari Selingkuhan</title>
+    <!-- Bootstrap core CSS -->
+    <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
-    <iframe id="tree" name="tree" src="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
-    <script type="text/javascript">
+    <div class="container">
+        <div class="row" style="margin-top:3rem">
+            <div class="col-sm-12 center">
+                <h1>Dirancang Hanya Untuk Mencari Pasangan
+                    <br>
+                    <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
+                </h1>
+
+                <p class="lead">
+                    <span class="label label-success">BONUS PULSA Rp 100.000 UNTUK 100 PENDAFTAR YANG BERUNTUNG HARI INI</label>
+                </p>
+                <hr>
+            </div>
+        </div>
+        <div class="row" style="margin-top:2rem">
+            <div class="col-sm-8">
+                <ul class="lst">
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Gratis</span> Sekarang dan Selamanya
+                    </li>
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Verifikasi</span> Member Secara Manual
+                    </li>
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Mudah</span> Mendapatkan Pasangan
+                    </li>
+
+                    <li>
+                        <span class="cpx">
+                            <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
+                    </li>
+                    <li>
+                        <span class="cpx">
+                            <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <a href="/daftar" id="go1">
+                    <img src="maya.png" class="img-responsive img-thumbnail" >
+                </a>
+                <script>
+                document.getElementById("go1").onclick = function() {
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                    return false;
+                };
+                </script>
+            </div>
+        </div>
+        <div class="row" style="margin-top:0.5rem">
+            <hr>
+            <div class="col-sm-12" style="text-align:center">
+                <p>
+                    <strong>Hanya Untuk Yang Serius!</strong>
+                </p>
+                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
+                <script>
+                document.getElementById("go2").onclick = function() {
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                    return false;
+                };
+                </script>
+
+            </div>
+        </div>
+        <script type="text/javascript">
     adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
     adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
     (function() {
