--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-success">BONUS PULSA Rp 100.000 UNTUK 100 PENDAFTAR YANG BERUNTUNG HARI INI</label>
+                    <span class="label label-success">Verifikasi Email Anda & Dapatkan Kesempatan Memenangkan Bonus Pulsa Rp 100.000! Diundi Tiap Hari!</label>
                 </p>
                 <hr>
             </div>
