--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="container">
         <div class="row" style="margin-top:3rem">
             <div class="col-sm-12 center">
-                <h1>Dirancang Hanya Untuk Mencari Pasangan
+                <h1>Sosial Media Untuk Dewasa
                     <br>
                     <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-success">Verifikasi Email Anda & Dapatkan Kesempatan Memenangkan Bonus Pulsa Rp 100.000! Diundi Tiap Hari!</label>
+                    <span class="label label-success">Verifikasi Email Anda & Dapatkan Kesempatan Memenangkan Berbagai Souvenir Menarik! Diundi Tiap Hari!</label>
                 </p>
                 <hr>
             </div>
@@ -44,11 +44,11 @@
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Verifikasi</span> Member Secara Manual
+                            <span class="org">Kencan</span> Tanpa Perantara
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Mudah</span> Mendapatkan Pasangan
+                            <span class="org">Verifikasi</span> Teman Kencan Anda
                     </li>
 
                     <li>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="/daftar" id="go1">
-                    <img src="maya.png" class="img-responsive img-thumbnail" >
+                    <img src="maya.jpg" class="img-responsive img-thumbnail" >
                 </a>
                 <script>
                 document.getElementById("go1").onclick = function() {
