--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Verifikasi</span> Teman Kencan Anda
-                    </li>
-
-                    <li>
-                        <span class="cpx">
-                            <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
+                            <span class="org">Teman Kencan Terverifikasi</span> Keamanan Terjaga
                     </li>
                     <li>
                         <span class="cpx">
