--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="container">
         <div class="row" style="margin-top:3rem">
             <div class="col-sm-12 center">
-                <h1>Sosial Media Untuk Dewasa
+                <h1>Rina Lagi Pengen
                     <br>
-                    <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
+                    <small>Daftar And Have Fun Yuk</small>
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-success">Verifikasi Email Anda & Dapatkan Kesempatan Memenangkan Berbagai Souvenir Menarik! Diundi Tiap Hari!</label>
+                    <span class="label label-danger">PERINGATAN: Hanya Untuk Dewasa</label>
                 </p>
                 <hr>
             </div>
@@ -44,11 +44,11 @@
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Kencan</span> Tanpa Perantara
+                            <span class="org">Semua Cewek</span> Terverifikasi
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Teman Kencan Terverifikasi</span> Keamanan Terjaga
+                            <span class="org">Deal</span> Tanpa Perantara
                     </li>
                     <li>
                         <span class="cpx">
@@ -58,7 +58,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="/daftar" id="go1">
-                    <img src="maya.jpg" class="img-responsive img-thumbnail" >
+                    <img src="maya.jpg" class="img-responsive img-thumbnail">
                 </a>
                 <script>
                 document.getElementById("go1").onclick = function() {
@@ -85,25 +85,25 @@
             </div>
         </div>
         <script type="text/javascript">
-    adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
-    adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
-    (function() {
-        var oldonload = window.onload;
-        window.onload = function() {
-            __adroll_loaded = true;
-            var scr = document.createElement("script");
-            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-            scr.setAttribute('async', 'true');
-            scr.type = "text/javascript";
-            scr.src = host + "/j/roundtrip.js";
-            ((document.getElementsByTagName('head') || [null])[0] ||
-                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-            if (oldonload) {
-                oldonload()
-            }
-        };
-    }());
-    </script>
+        adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
+        adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
+        (function() {
+            var oldonload = window.onload;
+            window.onload = function() {
+                __adroll_loaded = true;
+                var scr = document.createElement("script");
+                var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+                scr.setAttribute('async', 'true');
+                scr.type = "text/javascript";
+                scr.src = host + "/j/roundtrip.js";
+                ((document.getElementsByTagName('head') || [null])[0] ||
+                    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+                if (oldonload) {
+                    oldonload()
+                }
+            };
+        }());
+        </script>
 </body>
 
 </html>
