--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-danger">PERINGATAN: Hanya Untuk Dewasa</label>
+                    <span class="label label-danger">PERINGATAN: Hanya Untuk Dewasa & Berani Mencoba Sensasi Baru</label>
                 </p>
                 <hr>
             </div>
@@ -77,33 +77,13 @@
                 <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
                 <script>
                 document.getElementById("go2").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru1';
                     return false;
                 };
                 </script>
 
             </div>
         </div>
-        <script type="text/javascript">
-        adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
-        adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
-        (function() {
-            var oldonload = window.onload;
-            window.onload = function() {
-                __adroll_loaded = true;
-                var scr = document.createElement("script");
-                var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-                scr.setAttribute('async', 'true');
-                scr.type = "text/javascript";
-                scr.src = host + "/j/roundtrip.js";
-                ((document.getElementsByTagName('head') || [null])[0] ||
-                    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-                if (oldonload) {
-                    oldonload()
-                }
-            };
-        }());
-        </script>
 </body>
 
 </html>
