--- a/index.html
+++ b/index.html
@@ -1,89 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>Dirancang Untuk Mencari Selingkuhan</title>
-    <!-- Bootstrap core CSS -->
-    <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href="style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-    <div class="container">
-        <div class="row" style="margin-top:3rem">
-            <div class="col-sm-12 center">
-                <h1>Rina Lagi Pengen
-                    <br>
-                    <small>Daftar And Have Fun Yuk</small>
-                </h1>
-
-                <p class="lead">
-                    <span class="label label-danger">PERINGATAN: Hanya Untuk Dewasa & Berani Mencoba Sensasi Baru</label>
-                </p>
-                <hr>
-            </div>
-        </div>
-        <div class="row" style="margin-top:2rem">
-            <div class="col-sm-8">
-                <ul class="lst">
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Gratis</span> Sekarang dan Selamanya
-                    </li>
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Semua Cewek</span> Terverifikasi
-                    </li>
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Deal</span> Tanpa Perantara
-                    </li>
-                    <li>
-                        <span class="cpx">
-                            <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <a href="/daftar" id="go1">
-                    <img src="maya.jpg" class="img-responsive img-thumbnail">
-                </a>
-                <script>
-                document.getElementById("go1").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
-                    return false;
-                };
-                </script>
-            </div>
-        </div>
-        <div class="row" style="margin-top:0.5rem">
-            <hr>
-            <div class="col-sm-12" style="text-align:center">
-                <p>
-                    <strong>Hanya Untuk Yang Serius!</strong>
-                </p>
-                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
-                <script>
-                document.getElementById("go2").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru1';
-                    return false;
-                };
-                </script>
-
-            </div>
-        </div>
-</body>
-
-</html>
+<script>
+window.location.replace("http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=redir");
+</script>
