--- a/index.html
+++ b/index.html
@@ -1,3 +1,54 @@
-<script>
-window.location.replace("http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=redir");
-</script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Psstt.... Mau Tau Apaan? Daftar Aja</title>
+    <style type="text/css">
+    html {
+        overflow: auto;
+    }
+    html,
+    body,
+    div,
+    iframe {
+        margin: 0px;
+        padding: 0px;
+        height: 100%;
+        border: none;
+    }
+    iframe {
+        display: block;
+        width: 100%;
+        border: none;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    </style>
+    <link rel="icon" href="favicon.ico" />
+</head>
+
+<body>
+    <iframe id="tree" name="tree" src="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+    <script type="text/javascript">
+    adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
+    adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
+    (function() {
+        var oldonload = window.onload;
+        window.onload = function() {
+            __adroll_loaded = true;
+            var scr = document.createElement("script");
+            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+            scr.setAttribute('async', 'true');
+            scr.type = "text/javascript";
+            scr.src = host + "/j/roundtrip.js";
+            ((document.getElementsByTagName('head') || [null])[0] ||
+                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+            if (oldonload) {
+                oldonload()
+            }
+        };
+    }());
+    </script>
+</body>
+
+</html>
