--- a/index.html
+++ b/index.html
@@ -1,54 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Psstt.... Mau Tau Apaan? Daftar Aja</title>
-    <style type="text/css">
-    html {
-        overflow: auto;
-    }
-    html,
-    body,
-    div,
-    iframe {
-        margin: 0px;
-        padding: 0px;
-        height: 100%;
-        border: none;
-    }
-    iframe {
-        display: block;
-        width: 100%;
-        border: none;
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
-    </style>
-    <link rel="icon" href="favicon.ico" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>Thanks Guys, Lets Have Fun !!!</title>
+    <!-- Bootstrap core CSS -->
+    <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
-    <iframe id="tree" name="tree" src="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
-    <script type="text/javascript">
-    adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
-    adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
-    (function() {
-        var oldonload = window.onload;
-        window.onload = function() {
-            __adroll_loaded = true;
-            var scr = document.createElement("script");
-            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-            scr.setAttribute('async', 'true');
-            scr.type = "text/javascript";
-            scr.src = host + "/j/roundtrip.js";
-            ((document.getElementsByTagName('head') || [null])[0] ||
-                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-            if (oldonload) {
-                oldonload()
-            }
-        };
-    }());
-    </script>
+    <div class="container">
+        <div class="row" style="margin-top:2rem">
+            <div class="col-sm-12 center">
+                <h1>Thanks Guys, Lets Have Fun !!!</h1>
+                <p class="lead">
+                    <span class="label label-danger">PERINGATAN: Hanya Untuk Dewasa</label>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="maya.jpg" class="img-responsive img-thumbnail" style="display:block; margin:auto auto;margin-top:1.5rem">
+            </div>
+        </div>
+        <div class="row" style="margin-top:2.5rem;margin-bottom:0rem">
+            <script type="text/javascript">
+            var submitted = false;
+            </script>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=brx';}"></iframe>
+            <form class="form" action="https://docs.google.com/forms/d/1WShK3sNXGcGQ1DElVlT80q4fwXqWEWoXgRd-uLk1WDU/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <div class="input-group">
+                        <input type="email" name="entry.1781477839" value="" class="form-control" id="entry_1781477839" dir="auto" aria-label="E-Mail Hesemene Must be a valid email address" title="Must be a valid email address" placeholder="Masukkan Alamat Email Mu">
+                        <input type="hidden" name="draftResponse" value="[,,&quot;94926701541907668&quot;]">
+                        <input type="hidden" name="pageHistory" value="0">
+                        <input type="hidden" name="fbzx" value="94926701541907668">
+                        <span class="input-group-btn">
+                            <input type="submit" name="submit" value="Izinkan Saya Masuk" id="ss-submit" class="btn btn-danger">
+                        </span>
+                    </div>
+                    <!--div style="text-align:center">
+                        <em>
+                            <small>
+                                <strong>NO SPAM PROMISE</strong>, unsubscribe anytime.</small>
+                        </em>
+                    </div-->
+            </form>
+            </div>
+            <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 </body>
 
 </html>
