--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Dirancang Untuk Mencari Selingkuhan</title>
+    <title>Bule Cari Kenalan</title>
     <!-- Bootstrap core CSS -->
     <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row" style="margin-top:3rem">
             <div class="col-sm-12 center">
-                <h1>Bule Cari Jodoh
+                <h1>Bule Cari Kenalan
                     <br>
                     <small>Lebih Dari 75 Juta Member Dari Eropa</small>
                 </h1>
@@ -48,13 +48,13 @@
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Mudah</span> Mendapatkan Pasangan
+                            <span class="org">Mudah</span> Mendapatkan Kenalan
                     </li>
 
-                    <li>
+                    <!--li>
                         <span class="cpx">
                             <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
-                    </li>
+                    </li-->
                     <li>
                         <span class="cpx">
                             <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
@@ -67,7 +67,7 @@
                 </a>
                 <script>
                 document.getElementById("go1").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fm';
                     return false;
                 };
                 </script>
@@ -82,7 +82,7 @@
                 <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
                 <script>
                 document.getElementById("go2").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fm';
                     return false;
                 };
                 </script>
