--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -79,7 +79,7 @@
                 <p>
                     <strong>Hanya Untuk Yang Serius!</strong>
                 </p>
-                <a id="go2" href="/daftar" class="btn btn-large" style="background-color:#ff6600; border-color:#ff6600">DAFTAR SEKARANG!</a>
+                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">DAFTAR SEKARANG!</a>
                 <script>
                 document.getElementById("go2").onclick = function() {
                     window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fm';
