--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -44,6 +44,10 @@
                     </li>
                     <li>
                         <span class="cpx">
+                            <span class="org">Belajar</span> Bahasa Asing Dari Native Speaker
+                    </li>
+                    <li>
+                        <span class="cpx">
                             <span class="org">Verifikasi</span> Member Secara Manual
                     </li>
                     <li>
