--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Bule Cari Kenalan</title>
+    <title>Cari Kenalan Bule Yuk</title>
     <!-- Bootstrap core CSS -->
     <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row" style="margin-top:3rem">
             <div class="col-sm-12 center">
-                <h1>Cari Kenalan Bule Yuk
+                <h1>Cari Kenalan Bule Yuk, Siapa Tau Dapat Jodoh
                     <br>
                     <small>Lebih Dari 75 Juta Member Dari Eropa</small>
                 </h1>
@@ -44,10 +44,6 @@
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Belajar</span> Bahasa Asing Dari Native Speaker
-                    </li>
-                    <li>
-                        <span class="cpx">
                             <span class="org">Verifikasi</span> Member Secara Manual
                     </li>
                     <li>
@@ -55,10 +51,10 @@
                             <span class="org">Mudah</span> Mendapatkan Kenalan
                     </li>
 
-                    <!--li>
+                    <li>
                         <span class="cpx">
                             <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
-                    </li-->
+                    </li>
                     <li>
                         <span class="cpx">
                             <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
