--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Cari Kenalan Bule Yuk</title>
+    <title>Jodoh Gak Usah Diramal, Cari Aja Disini </title>
     <!-- Bootstrap core CSS -->
     <link href="http://oss.maxcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
