--- a/promo-32m100/index.html
+++ b/promo-32m100/index.html
@@ -15,79 +15,82 @@
     <link href="style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body>
-    <div class="container">
-        <div class="row" style="margin-top:3rem">
-            <div class="col-sm-12 center">
-                <h1>Dirancang Untuk Mencari Selingkuhan
-                    <br>
-                    <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
-                </h1>
+<div class="container">
+    <div class="row" style="margin-top:3rem">
+        <div class="col-sm-12 center">
+            <h1>Dirancang Untuk Mencari Selingkuhan
+                <br>
+                <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
+            </h1>
 
-                <p class="lead">
-                    <span class="label label-danger">Peringatan: Hanya Untuk 21 Tahun Keatas</label>
-                </p>
-                <hr>
-            </div>
+            <p class="lead">
+                <span class="label label-danger">Peringatan: Hanya Untuk 21 Tahun Keatas</span>
+            </p>
+            <hr>
         </div>
-        <div class="row" style="margin-top:2rem">
-            <div class="col-sm-8">
-                <ul class="lst">
-                    <li>
+    </div>
+    <div class="row" style="margin-top:2rem">
+        <div class="col-sm-8">
+            <ul class="lst">
+                <li>
                         <span class="cpx">
-                            <span class="org">Gratis</span> Sekarang dan Selamanya
-                    </li>
-                     <li>
+                            <span class="org">Gratis</span> Sekarang dan Selamanya</span>
+                </li>
+                <li>
                         <span class="cpx">
-                            <span class="org">Mudah</span> Mendapatkan Pasangan
-                    </li>
-                    <li>
+                            <span class="org">Mudah</span> Mendapatkan Pasangan</span>
+                </li>
+                <li>
                         <span class="cpx">
-                            <span class="org">Kencan</span> Virtual Maupun Nyata
-                    </li>
-                    <li>
+                            <span class="org">Kencan</span> Virtual Maupun Nyata</span>
+                </li>
+                <li>
                         <span class="cpx">
                             <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
-                    </li>
-                    <li>
+                </li>
+                <li>
                         <span class="cpx">
-                            <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <a href="/daftar" id="go1">
-                    <img src="maya.jpg" class="img-responsive img-thumbnail" style="margin-top:.5rem">
-                </a>
-                <script>
-                document.getElementById("go1").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
-                    return false;
-                };
-                </script>
-            </div>
+                            <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga</span>
+                </li>
+            </ul>
         </div>
-        <div class="row" style="margin-top:0.5rem">
-            <hr>
-            <div class="col-sm-12" style="text-align:center">
-                <p>
-                    <strong>Hanya Untuk Yang Serius!</strong>
-                </p>
-                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar Sekarang!</a>
-                <script>
-                document.getElementById("go2").onclick = function() {
+        <div class="col-sm-4">
+            <a href="/daftar" id="go1">
+                <img src="maya.jpg" class="img-responsive img-thumbnail" style="margin-top:.5rem">
+            </a>
+            <script>
+                document.getElementById("go1").onclick = function () {
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=32m100';
+                    return false;
+                };
+            </script>
+        </div>
+    </div>
+    <div class="row" style="margin-top:0.5rem">
+        <hr>
+        <div class="col-sm-12" style="text-align:center">
+            <p>
+                <strong>Hanya Untuk Yang Serius!</strong>
+            </p>
+            <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">Daftar
+                Sekarang!</a>
+            <script>
+                document.getElementById("go2").onclick = function () {
                     window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=biru';
                     return false;
                 };
-                </script>
+            </script>
 
-            </div>
         </div>
+    </div>
+</div>
+
 </body>
 
 </html>
