--- a/lp1/index.html
+++ b/lp1/index.html
@@ -77,7 +77,7 @@
                 </ul>
                 <div class="loader"></div>
                 <a class="button_primary agree"
-                   href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=prime">Lanjutkan!</a>
+                   href="http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=ld1">Lanjutkan!</a>
             </div>
         </div>
     </div>
