--- a/lp1/index.html
+++ b/lp1/index.html
@@ -77,7 +77,7 @@
                 </ul>
                 <div class="loader"></div>
                 <a class="button_primary agree convert"
-                   href="/ok">Daftar Sekarang</a>
+                   href="/daftar">Daftar Sekarang</a>
             </div>
         </div>
     </div>
