--- a/lpd/index.html
+++ b/lpd/index.html
@@ -23,9 +23,9 @@
 
         <div class="row" style="margin-top:0.8em">
             <div class="col-md-12 ld-header">
-                <h1 class="center-text text-center red">Wanita Wanita Ini Hanya Butuh
+                <h1 class="center-text text-center red">Apapun Fantasi Mu Semua Ada Di Sini
                     <br>
-                    <small>Hubungan Cepat, Tanpa Tujuan Komersial, Have Fun Only</small>
+                    <small>Wanita - Wanita Ini Benar Benar Butuh Sentuhan Pria</small>
                 </h1>
                 <hr>
             </div>
@@ -42,7 +42,7 @@
 
                 <div class="ld-pitch">
                     <p class='lead ld-lead text-center'>
-                        Dengan Menekan Tombol "DAFTAR", Saya Setuju
+                        Dengan Menekan Tombol "DAFTAR", Kamu Menyetujui
                     </p>
 
                     <ul>
