--- a/lpd/index.html
+++ b/lpd/index.html
@@ -42,7 +42,7 @@
 
                 <div class="ld-pitch">
                     <p class='lead ld-lead text-center'>
-                        Dengan Menekan Tombol "DAFTAR", Kamu Menyetujui
+                        Dengan Menekan Tombol "DAFTAR", Saya Menyetujui Bahwa
                     </p>
 
                     <ul>
