--- a/lpd/index.html
+++ b/lpd/index.html
@@ -25,7 +25,7 @@
             <div class="col-md-12 ld-header">
                 <h1 class="center-text text-center red">Apapun Fantasi Mu Semua Ada Di Sini
                     <br>
-                    <small>Wanita - Wanita Ini Benar Benar Butuh Sentuhan Pria</small>
+                    <small>Wanita - Wanita Ini Benar Benar Membutuhkan Hubungan Serius</small>
                 </h1>
                 <hr>
             </div>
